# langchain-demo

./: .gitignore  README.md  pyproject.toml
langchain-examples/agents/: dynamic_model.ipynb  dynamic_prompt.ipynb  dynamic_tools.ipynb  short_term_memory.ipynb  stream_output.ipynb  structured_output.ipynb  tool_access_context.ipynb  tool_access_state.ipynb  tool_access_store.ipynb  tool_error_handling.ipynb
langchain-examples/core/: tool_calling.py
langchain-examples/models/: batch_output.ipynb  chat_model.ipynb  messages.ipynb  reasoning.ipynb  stream_output.ipynb  structured_output.ipynb  tool_calling.ipynb
langchain-examples/quick-start/: get_weather_agent.ipynb  weather_forecasting_agent.ipynb
langgraph-examples/interrupts/: common_patterns.ipynb  human_in_the_loop.py  interrupt.ipynb
langgraph-examples/persistence/: interrupt_when_time_travel.ipynb  replay.ipynb  state.ipynb  store.ipynb  store_in_langgraph.ipynb
langgraph-examples/quick-start/: calculator.ipynb  email_agent.ipynb
langgraph-examples/streaming/: basic_usage.ipynb  custom_mode.ipynb  updates_and_values.ipynb
projects/chatbot/: pyproject.toml
projects/chatbot/src/chatbot/cli/: cli.py
projects/deepsearch-demo/: README.md  pyproject.toml
projects/deepsearch-demo/examples/ai_trends_2026/: messages.md  report.md  state.json
projects/deepsearch-demo/src/deepsearch_demo/: __init__.py  agents.py  cli.py  schema.py  state.py  tools.py  utils.py
src/agent_lab/: model_hub.py
tutorials/: semantic_search_engine.ipynb
tutorials/rag/: custom_rag_agent.ipynb  rag_agent.ipynb
