[project]
name = "agent-lab"
version = "0.1.0"
description = "Workspace for managing agent demo projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "deepagents>=0.4.12",
  "jupyter>=1.1.1",
  "langchain>=1.1.0",
  "langchain-community>=0.4.1",
  "langchain-deepseek>=1.0.1",
  "langchain-openai>=1.1.0",
  "langgraph>=1.0.4",
  "loguru>=0.7.3",
  "pypdf>=6.9.2",
  "pytest>=9.0.2",
  "rich>=14.2.0",
  "socksio>=1.0.0",
  "tavily-python>=0.7.23",
  "typer>=0.24.1",
]

[project.optional-dependencies]
deepsearch = ["deepsearch-demo"]
dataagent = ['dataagent-demo']

[tool.uv]
managed = true

[tool.uv.sources]
deepsearch-demo = { workspace = true }
dataagent-demo = { workspace = true }

[tool.uv.workspace]
members = ["projects/*"]
