[project]
name = "deepsearch-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leo", email = "liaofeng0203@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
deepsearch-demo = "deepsearch_demo:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
